--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,10 +53,14 @@ for:
     - path: 2019\bin\ReleaseCI\Antlr4ParseTreeVisualizer.2019.pdb
       type: File
       name: visualizer
+    
+    - path: 2019\bin\ReleaseCI\Newtonsoft.Json.*
+      type: File
+      name: visualizer
 
   deploy:
     - provider: GitHub
-      desciprion: ''
+      description: ''
       auth_token:
         secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
       artifact: visualizer
@@ -75,9 +79,13 @@ for:
       type: File
       name: visualizer
 
+    - path: 2017\bin\ReleaseCI\Newtonsoft.Json.*
+      type: File
+      name: visualizer
+
   deploy:
     - provider: GitHub
-      desciprion: ''
+      description: ''
       auth_token:
         secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
       artifact: visualizer
