--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 0.0.0.{build}
+version: 0.1.0.{build}
 image:
   - Visual Studio 2019
   - Visual Studio 2017
@@ -17,7 +17,7 @@ only_commits:
 assembly_info:
   patch: true
   file: AssemblyInfo.*
-  assembly_version: "1.0.0.{build}"
+  assembly_version: "{version}"
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 dotnet_csproj:
