--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,11 +46,11 @@ for:
       - image: Visual Studio 2019
   configuration: ReleaseCI
   artifacts:
-    - path: 2019\bin\Debug\Antlr4ParseTreeVisualizer.2019.*
+    - path: 2019\bin\Debug\net472\*.dll
       type: File
       name: visualizer
     
-    - path: 2019\bin\Debug\Newtonsoft.Json.*
+    - path: 2019\bin\Debug\net472\*.pdb
       type: File
       name: visualizer
 
@@ -67,11 +67,11 @@ for:
       - image: Visual Studio 2017
   configuration: ReleaseCI2017
   artifacts:
-    - path: 2017\bin\Debug\Antlr4ParseTreeVisualizer.2017.*
+    - path: 2017\bin\Debug\net472\*.dll
       type: File
       name: visualizer
-
-    - path: 2017\bin\Debug\Newtonsoft.Json.*
+    
+    - path: 2017\bin\Debug\net472\*.pdb
       type: File
       name: visualizer
 
