--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,20 +46,16 @@ for:
       - image: Visual Studio 2019
   configuration: ReleaseCI
   artifacts:
-    - path: 2019\bin\Debug\net472\*.dll
-      type: File
-      name: visualizer
-    
-    - path: 2019\bin\Debug\net472\*.pdb
-      type: File
-      name: visualizer
+    - path: 2019\bin\Debug\2019
+      type: zip
+      name: 2019
 
   deploy:
     - provider: GitHub
       description: ''
       auth_token:
         secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-      artifact: visualizer
+      artifact: 2019
 
 - 
   matrix:
@@ -67,17 +63,13 @@ for:
       - image: Visual Studio 2017
   configuration: ReleaseCI2017
   artifacts:
-    - path: 2017\bin\Debug\net472\*.dll
-      type: File
-      name: visualizer
+    - path: 2017\bin\Debug\2017
+      type: zip
+      name: 2017
     
-    - path: 2017\bin\Debug\net472\*.pdb
-      type: File
-      name: visualizer
-
   deploy:
     - provider: GitHub
       description: ''
       auth_token:
         secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-      artifact: visualizer
+      artifact: 2017
