--- a/2017/2017.csproj
+++ b/2017/2017.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
