--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,9 +66,8 @@ for:
       - image: Visual Studio 2017
   configuration: ReleaseCI2017
   install:
-  - ps: Write-Host $env:temp\dotnet-install.ps1 
   - ps: Invoke-WebRequest -Uri 'https://dot.net/v1/dotnet-install.ps1' -UseBasicParsing -OutFile "$env:temp\dotnet-install.ps1"
-  - ps: $env:temp\dotnet-install.ps1 -Architecture x64 -Version '3.0.100' -InstallDir "$env:ProgramFiles\dotnet"
+  - ps: $env:temp\\dotnet-install.ps1 -Architecture x64 -Version '3.0.100' -InstallDir "$env:ProgramFiles\dotnet"
   build:
     project: 2017\2017.csproj
     verbosity: detailed
