test invalid csporj name

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ for:
   - ps: Invoke-WebRequest -Uri 'https://dot.net/v1/dotnet-install.ps1' -UseBasicParsing -OutFile "$env:temp\dotnet-install.ps1"
   - ps: '& $env:temp\dotnet-install.ps1 -Architecture x64 -Version "3.0.100" -InstallDir "$env:ProgramFiles\dotnet"'
   build:
-    project: 2017\2017.csproj
+    project: blah.csproj
     verbosity: detailed
   artifacts:
     - path: 2017\bin\Debug
