Test dotnet version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,6 +68,7 @@ for:
   install:
   - ps: Invoke-WebRequest -Uri 'https://dot.net/v1/dotnet-install.ps1' -UseBasicParsing -OutFile "$env:temp\dotnet-install.ps1"
   - ps: '& $env:temp\dotnet-install.ps1 -Architecture x64 -Version "3.0.100" -InstallDir "$env:ProgramFiles\dotnet"'
+  - ps: dotnet --version
   build:
     project: blah.csproj
     verbosity: detailed
