Test build.project entry

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,8 @@ dotnet_csproj:
   informational_version: '{version}'
 before_build:
 - cmd: nuget restore
+build:
+  project: 2017\2017.csproj
 
 matrix:
   fast_finish: true
@@ -47,7 +49,6 @@ for:
   configuration: ReleaseCI
   build:
     project: 2019\2019.csproj
-    verbosity: detailed
   artifacts:
     - path: 2019\bin\Debug
       type: zip
@@ -68,9 +69,8 @@ for:
   install:
   - ps: Invoke-WebRequest -Uri 'https://dot.net/v1/dotnet-install.ps1' -UseBasicParsing -OutFile "$env:temp\dotnet-install.ps1"
   - ps: '& $env:temp\dotnet-install.ps1 -Architecture x64 -Version "3.0.100" -InstallDir "$env:ProgramFiles\dotnet"'
-  - ps: dotnet --version
   build:
-    project: blah.csproj
+    project: 2017\2017.csproj
     verbosity: detailed
   artifacts:
     - path: 2017\bin\Debug
