--- a/2017.Standard/2017.Standard.csproj
+++ b/2017.Standard/2017.Standard.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectGuid>{BEB4FBE6-54E8-4212-9D94-C4E8F318FD9F}</ProjectGuid>
     <RootNamespace>ParseTreeVisualizer</RootNamespace>
-    <AssemblyName>Antlr4.Runtime.ParseTreeVisualizer.2017</AssemblyName>
+    <AssemblyName>Antlr4.Runtime.Standard.ParseTreeVisualizer.2017</AssemblyName>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AssemblyTitle>ANTLR4 Parse Tree Visualizer (VS 2017)</AssemblyTitle>
@@ -15,8 +14,9 @@
     <DebugType>portable</DebugType>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <DefineConstants>TRACE;ANTLR_RUNTIME</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ReleaseCI2017|AnyCPU'">
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
@@ -24,9 +24,7 @@
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
-    <PackageReference Include="Antlr4.Runtime" Version="4.6.6">
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </PackageReference>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.7.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
@@ -39,7 +37,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Xaml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
 </Project>
