--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,20 +42,26 @@ for:
 
   configuration: ReleaseCI
   build:
-    project: 2019\2019.csproj
+    project:
+      2019\2019.csproj
+      2019.Standard\2019.Standard.csproj
   before_build:
   - cmd: dotnet restore 2019\2019.csproj
+  - cmd: dotnet restore 2019.Standard\2019.Standard.csproj
+  after_build:
+    - cmd: 7z a ANTLRVisualizer2019.zip %APPVEYOR_BUILD_FOLDER%\2019\bin\Debug\*
+    - cmd: 7z a ANTLRVisualizer2019.zip %APPVEYOR_BUILD_FOLDER%\2019.Standard\bin\Debug\*
   artifacts:
-    - path: 2019\bin\Debug
-      type: zip
+    - path: ANTLRVisualizer2019.zip
       name: ANTLRVisualizer2019
 
-  deploy:
-    - provider: GitHub
-      description: ''
-      auth_token:
-        secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-      artifact: ANTLRVisualizer2019
+  # deploy:
+  #   - provider: GitHub
+  #     description: ''
+  #     auth_token:
+  #       secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
+  #     artifact:
+  #       ANTLRVisualizer2019
 
 - 
   matrix:
@@ -64,17 +70,22 @@ for:
 
   configuration: ReleaseCI2017
   build:
-    project: 2017\2017.csproj
+    project:
+      2017\2017.csproj
+      2017.Standard\2017.Standard.csproj
   before_build:
     - cmd: dotnet restore 2017\2017.csproj
+    - cmd: dotnet restore 2017.Standard\2017.Standard.csproj
+  after_build:
+    - cmd: 7z a ANTLRVisualizer2017.zip %APPVEYOR_BUILD_FOLDER%\2017\bin\Debug\*
+    - cmd: 7z a ANTLRVisualizer2017.zip %APPVEYOR_BUILD_FOLDER%\2017.Standard\bin\Debug\*
   artifacts:
-    - path: 2017\bin\Debug
-      type: zip
+    - path: ANTLRVisualizer2017.zip
       name: ANTLRVisualizer2017
 
-  deploy:
-    - provider: GitHub
-      description: ''
-      auth_token:
-        secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-      artifact: ANTLRVisualizer2017
+  # deploy:
+  #   - provider: GitHub
+  #     description: ''
+  #     auth_token:
+  #       secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
+  #     artifact: ANTLRVisualizer2017
