--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,13 +53,13 @@ for:
     - path: ANTLRVisualizer2019.zip
       name: ANTLRVisualizer2019
 
-  # deploy:
-  #   - provider: GitHub
-  #     description: ''
-  #     auth_token:
-  #       secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-  #     artifact:
-  #       ANTLRVisualizer2019
+  deploy:
+    - provider: GitHub
+      description: ''
+      auth_token:
+        secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
+      artifact:
+        ANTLRVisualizer2019
 
 - 
   matrix:
@@ -79,9 +79,9 @@ for:
     - path: ANTLRVisualizer2017.zip
       name: ANTLRVisualizer2017
 
-  # deploy:
-  #   - provider: GitHub
-  #     description: ''
-  #     auth_token:
-  #       secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
-  #     artifact: ANTLRVisualizer2017
+  deploy:
+    - provider: GitHub
+      description: ''
+      auth_token:
+        secure: aJaTRXIa+zc+SOGdNPKTH+znUun60Jh5b5pdjzLslhnoKk4vh1eoqO/vnGcDEwig
+      artifact: ANTLRVisualizer2017
