--- a/2017/2017.csproj
+++ b/2017/2017.csproj
@@ -4,7 +4,8 @@
     <RootNamespace>ParseTreeVisualizer</RootNamespace>
     <AssemblyName>Antlr4.Runtime.ParseTreeVisualizer.2017</AssemblyName>
     <TargetFramework>net472</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <AssemblyTitle>ANTLR4 Parse Tree Visualizer (VS 2017)</AssemblyTitle>
     <Product>ANTLR4 Parse Tree Visualizer</Product>
     <Description>Visual Studio debugging visualizer for ANTLR4 parse trees</Description>
@@ -36,8 +37,12 @@
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Net.Compilers" Version="3.3.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers">
