--- a/2019.Standard/2019.Standard.csproj
+++ b/2019.Standard/2019.Standard.csproj
@@ -3,7 +3,8 @@
     <RootNamespace>ParseTreeVisualizer</RootNamespace>
     <AssemblyName>Antlr4.Runtime.Standard.ParseTreeVisualizer.2019</AssemblyName>
     <TargetFrameworks>net472</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <AssemblyTitle>ANTLR4 Parse Tree Visualizer</AssemblyTitle>
     <Product>ANTLR4 Parse Tree Visualizer</Product>
     <Description>Visual Studio debugging visualizer for ANTLR4 parse trees</Description>
@@ -37,7 +38,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
