UI without controls

--- a/Legacy/Debugger/Debugger.csproj
+++ b/Legacy/Debugger/Debugger.csproj
@@ -1,26 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
-    <RootNamespace>ParseTreeVisualizer.Debuggee</RootNamespace>
-    <AssemblyName>ParseTreeVisualizer.Legacy.Debuggee</AssemblyName>
+    <TargetFramework>net472</TargetFramework>
+    <RootNamespace>ParseTreeVisualizer</RootNamespace>
+    <AssemblyName>ParseTreeVisualizer.Legacy.Debugger</AssemblyName>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <DefineConstants>VISUALIZER_DEBUGGEE;ANTLR_LEGACY</DefineConstants>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ZSpitz.Util" Version="0.1.112" />
+    <PackageReference Include="ZSpitz.Util.Wpf" Version="0.1.112" />
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
     <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\PublicAssemblies\Microsoft.VisualStudio.DebuggerVisualizers.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+    <ProjectReference Include="..\Debuggee\Debuggee.csproj" />
   </ItemGroup>
 
-  <Import Project="..\..\Debuggee\Debuggee.projitems" Label="SharedDebuggee" />
-  <Import Project="..\..\Serialization\Serialization.projitems" Label="Serialization" />
+  <Import Project="..\..\UI\UI.projitems" Label="UI" />
 
   <Target Name="CopyPackageAssembliesToSubFolder" AfterTargets="ResolveReferences">
     <ItemGroup>
