--- a/Legacy/Debugger/Legacy.Debugger.csproj
+++ b/Legacy/Debugger/Legacy.Debugger.csproj
@@ -20,7 +20,9 @@
       <Private>false</Private>
     </Reference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
-    <ProjectReference Include="..\Debuggee\Debuggee.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
+    <ProjectReference Include="..\Debuggee\Legacy.Debuggee.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\UI\UI.projitems" Label="UI" />
